--- a/README.Rmd
+++ b/README.Rmd
@@ -43,7 +43,7 @@ Apesar de acreditarmos no acesso sem distinção a dados abertos, não recomenda
 No Brasil, a notificação de casos carrega consigo vieses espaciais, econômicos e de classe que não podem ser ignorados. Para ver modelos __responsáveis__ de previsão do crescimento no número de casos veja o [Observatório COVID-19 Brasil](https://covid19br.github.io/index.html) (um grupo colaborativo de cientistas brasileirxs) e o [Mapa de previsão da propagação da COVID-19 por contágio comunitário no Brasil](https://covid-19-risk.github.io/map/brazil/pt/).
 
 
-### Nota sobre os dados disponibilizados pelo Ministério da Saúde
+### Nota sobre os dados disponibilizados pelo Ministério da Saúde do Brasil
 
 + A partir de 2020-03-14, a notificação de casos graves de COVID-19 foca apenas nos casos graves que são atendidos nos hospitais
 
@@ -63,27 +63,27 @@ Importante lembrar que desde 2020-03-27 tem muitos testes sem resultados e que o
 Entre [aqui](https://liibre.github.io/coronabr/articles/lac.html) para acompanhar os casos na América Latina (versão em espanhol [aqui](https://liibre.github.io/coronabr/articles/lac_es.html))
 
 
-### Crescimento nacional no número de casos
+### Crescimento nacional no número de casos de COVID-19
 
 <img src="https://raw.githubusercontent.com/liibre/coronabr/master/docs/articles/graficos_files/figure-html/fig-casos-1.png" align="center" alt="" width="600" />
 
 
-### Entendendo o aumento diário
+### Número de novos casos de COVID-19 por dia
 
 <img src="https://raw.githubusercontent.com/liibre/coronabr/master/docs/articles/graficos_files/figure-html/fig-perc-1.png" align="center" alt="" width="600" />
 
 
-### Número de casos por estado brasileiro
+### Número proporcional de casos de COVID-19 por estado brasileiro
 
 <img src="https://raw.githubusercontent.com/liibre/coronabr/master/docs/articles/graficos_files/figure-html/mapa1-1.png" align="center" alt="" width="600" />
 
 
-### Crescimento do número de casos nos estados mais afetados
+### Crescimento do número de casos de COVID-19 nos estados mais afetados
 
 <img src="https://raw.githubusercontent.com/liibre/coronabr/master/docs/articles/graficos_files/figure-html/estados-1.png" align="center" alt="" width="600" />
 
 
-### Evolução do número de casos por estado
+### Evolução diária no número de casos de COVID-19 por estado brasileiro
 
 <img src="https://raw.githubusercontent.com/liibre/coronabr/master/vignettes/figs/anim.gif" align="center" alt="" width="600" />
 
