--- a/README.Rmd
+++ b/README.Rmd
@@ -9,58 +9,61 @@ output: github_document
 
 <img src="https://raw.githubusercontent.com/liibre/coronabr/master/vignettes/figs/liibre.png" align="right" alt="" width="120" />
 
-__coronabr__ é um pacote de [R](https://www.r-project.org/) para fazer download e visualizar os dados dos casos diários de coronavírus (COVID-19) disponibilizados por diferentes fontes:
+__coronabr__ é um pacote de [R](https://www.r-project.org/) que permite ao usuário fazer download e visualizar os dados oficiais divulgados dos casos de coronavírus (COVID-19), disponíveis nas seguintes fontes:
 
 - [Ministério da Saúde do Brasil](http://plataforma.saude.gov.br/novocoronavirus/#COVID-19-brazil)
 
 - Grupo colaborativo [O Brasil em dados libertos](https://brasil.io/dataset/covid19/caso)
 
-- [Johns Hopkins University](https://github.com/CSSEGISandData/COVID-19)
+- [Johns Hopkins University (EUA)](https://github.com/CSSEGISandData/COVID-19)
 
 
 ## Nosso objetivo
 
-O nosso objetivo é facilitar o acesso aos dados de diferentes fontes, usando ferramentas de acesso aberto e que permitam reprodutibilidade.
+Facilitar o acesso público aos dados atuais de COVID-19 disponíveis em diferentes fontes, através do uso de ferramentas de acesso aberto que permitem a reprodutibilidade por qualquer usuário.
 
-O código é aberto. Entre em [como usar](https://liibre.github.io/coronabr/articles/coronabr.html) para um exemplo de como utilizar o pacote. Compartilhe.
+Disponibilizar atualizações diárias dos gráficos. Sabemos, porém, que é preciso haver cautela por parte do usuário ao realizar comparações e interpretações entre países e estados, já que o contexto da pandemia de COVID-19 depende de muitas variáveis cujos números totais não podem facilmente demonstrar.
 
-Disponibilizamos aqui atualizações diárias dos gráficos. Sabemos que deve haver maneiras responsáveis de apresentar estes dados e que as comparações entre regiões e países dependem de muitas variáveis.
+Fazer ciência aberta, democrática e reprodutível. Note, que este é um projeto em desenvolvimento. Para contribuir, clique [aqui](https://liibre.github.io/coronabr/CONTRIBUTING.html).
 
-Fazemos ciência aberta, democrática e reprodutível. Este é um trabalho em desenvolvimento. Para entender como contribuir, clique [aqui](https://liibre.github.io/coronabr/CONTRIBUTING.html).
+
+## Código aberto
+
+Entre em [como usar](https://liibre.github.io/coronabr/articles/coronabr.html) para ver um exemplo de como utilizar o pacote __coronabr__. Compartilhe!
 
 
 ## Aviso!
 
-Os dados são referentes aos casos notificados. É sabido que neste momento há um acúmulo de testes para COVID-19 sem resultados. Assim, mais do que nunca, os números que vemos são das __notificações__ e não refletem a epidemia em si.
+Os dados baixados e usados pelo pacote __coronabr__ são referentes aos casos notificados apenas. É sabido que neste momento há um acúmulo de testes para COVID-19, porém ainda sem resultados. Assim, mais do que nunca, os números que reproduzimos são das __notificações__ atuais e não de todos os casos possíveis e atuais.
 
 
 ## Sobre os dados
 
 Antes de mais nada, declaramos nossa postura alinhada com as ideias de uma ciência de dados responsável, compromissada e feminista. Somos alinhadxs com o [manifest-no](https://www.manifestno.com/), refutamos regimes de dados prejudiciais e nos comprometemos a novos futuros de dados.
 
-Apesar de acreditarmos no acesso sem distinção a dados abertos, não recomendamos que toda análise que possa ser feita o seja. Ao se tratar de uma situação de saúde pública delicada, visualizações, extrapolações, e predições devem ser feitas com todo cuidado, lembrando que a qualidade dos dados é incerta e que todo dado diz respeito a uma pessoa.
+Apesar de acreditarmos no acesso sem distinção a dados abertos, não recomendamos que toda análise que possa ser feita com o __coronabr__ o seja. Ao se tratar de uma situação de saúde pública delicada, visualizações, extrapolações e predições devem ser feitas com todo cuidado, lembrando que a qualidade dos dados é incerta e que todo dado diz respeito a uma pessoa.
 
 No Brasil, a notificação de casos carrega consigo vieses espaciais, econômicos e de classe que não podem ser ignorados. Para ver modelos __responsáveis__ de previsão do crescimento no número de casos veja o [Observatório COVID-19 Brasil](https://covid19br.github.io/index.html) (um grupo colaborativo de cientistas brasileirxs) e o [Mapa de previsão da propagação da COVID-19 por contágio comunitário no Brasil](https://covid-19-risk.github.io/map/brazil/pt/).
 
 
 ### Nota sobre os dados disponibilizados pelo Ministério da Saúde do Brasil
 
-+ A partir de 2020-03-14, a notificação de casos graves de COVID-19 foca apenas nos casos graves que são atendidos nos hospitais
+- A partir de 2020-03-14, a notificação de casos graves de COVID-19 foca apenas  casos graves que são atendidos nos hospitais
 
-+ Até 2020-03-18 o ministério de saúde brasileiro disponibilizou os dados de casos de coronavirus COVID-19 discriminados por estado na página http://plataforma.saude.gov.br/novocoronavirus/#COVID-19-brazil
+- Até 2020-03-18, o ministério de saúde brasileiro disponibilizou os dados de casos de coronavírus COVID-19 discriminados por estado na página http://plataforma.saude.gov.br/novocoronavirus/#COVID-19-brazil
 
-+ Entre 2020-03-18 e 2020-03-25, a página original do Ministério da Saúde parou de funcionar e os dados de casos de coronavirus COVID-19 discriminados por estado foram divulgados em apresentações de powerpoint e PDFs no blog do Ministério. [Adriano Belisario](https://www.twitter.com/belisards) fez a compilação manual destes dados [neste repositório](https://github.com/belisards/coronabr)
+- Entre 2020-03-18 e 2020-03-25, a página original do Ministério da Saúde do Brasil parou de funcionar e os dados de casos de COVID-19 discriminados por estado foram divulgados em apresentações de Powerpoint e PDFs no blog do Ministério. [Adriano Belisario](https://www.twitter.com/belisards) fez a compilação manual destes dados [neste repositório](https://github.com/belisards/coronabr)
 
-+ A partir de 2020-03-26 o ministério de saúde brasileiro disponibilizou os dados de casos de coronavirus COVID-19 na página https://covid.saude.gov.br/
+- A partir de 2020-03-26, o Ministério de Saúde do Brasil disponibilizou os dados de casos de COVID-19 na página https://covid.saude.gov.br/
 
-+ A partir de 2020-03-28 a opção de fazer download da série histórica por casos voltou a estar disponível. Depois disso, o padrão vem mudado diariamente, mas agora temos uma função estável `get_corona_minsaude()` para o download desses dados (instruções de como usar [aqui](https://liibre.github.io/coronabr/articles/minsaude.html))
+- A partir de 2020-03-28, a opção de fazer download da série histórica por casos voltou a estar disponível. Depois disso, o padrão vem mudando diariamente, mas agora temos uma função estável, `get_corona_minsaude()`, para o download desses dados (veja as instruções de como usar [aqui](https://liibre.github.io/coronabr/articles/minsaude.html))
 
 
 ## Visualizando os dados
 
-Importante lembrar que desde 2020-03-27 tem muitos testes sem resultados e que os dados não refletem a epidemia e sim as notificações - e que essas estão atrasadas devido ao atraso no resultado dos testes.
+Importante lembrar que desde 2020-03-27 existem muitos testes sem resultados e que os dados não refletem a epidemia e sim, porém apenas as notificações oficiais - e que essas estão atrasadas devido ao atraso no resultado dos testes.
 
-Entre [aqui](https://liibre.github.io/coronabr/articles/lac.html) para acompanhar os casos na América Latina (versão em espanhol [aqui](https://liibre.github.io/coronabr/articles/lac_es.html))
+Entre [aqui](https://liibre.github.io/coronabr/articles/lac.html) para acompanhar os casos na América Latina (versão em espanhol [aqui](https://liibre.github.io/coronabr/articles/lac_es.html)).
 
 
 ### Crescimento nacional no número de casos de COVID-19
@@ -113,6 +116,7 @@ Entre [aqui](https://liibre.github.io/coronabr/articles/lac.html) para acompanha
 - [Dez considerações antes de criar mais um gráfico sobre o COVID-19 (em inglês)](https://medium.com/nightingale/ten-considerations-before-you-create-another-chart-about-covid-19-27d3bd691be8)
 
 - Siga o __Atila Iamarino__ no [youtube](https://www.youtube.com/channel/UCSTlOTcyUmzvhQi6F8lFi5w), [Instagram](www.instagram.com/oatila), [twitter](https://twitter.com/oatila) ou [telegram](https://t.me/corona_atila). Tem também um [fórum brasileiro de reddit](https://www.reddit.com/r/coronabr/) com muita informação
+
 
 ## Dúvidas, contribuições e sugestões?
 Poste uma *issue* [aqui](https://github.com/liibre/coronabr/issues), escreva-nos um [e-mail](mailto:liibrelab@gmail.com) ou nos encontre no twitter ([Sara](https://twitter.com/mortarasara), [Andrea](https://twitter.com/SanchezTapiaA) ou [Karlo](https://twitter.com/kguidonimartins)).
