articles em buildignore

--- a/vignettes/articles/mapas_br.Rmd
+++ b/vignettes/articles/mapas_br.Rmd
@@ -11,22 +11,71 @@ vignette: >
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## Fazendo um mapa a partir dos dados do Brasil.io
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+```{r}
+map_corona_br <- function(df,
+                          prop_pop = TRUE,
+                          anim = FALSE,
+                          dir = "figs"){
+  # puxando a data mais atualizada
+  datas <- plyr::count(df$date[df$confirmed > 0 & !is.na(df$state)])
+  datas$lag <- datas$freq - dplyr::lag(datas$freq)
+  if (datas$lag[which.max(datas$x)] < 0) {
+    data_max <- max(datas$x, na.rm = TRUE) - 1
+  } else {
+    data_max <- max(datas$x, na.rm = TRUE)
+  }
+  if (anim == FALSE) {
+  df <- df %>%
+    filter(.data$date == data_max)
+  }
+  df$Casos <- df$confirmed
+  # proporcao de casos por 100k
+  df$`Casos (por 100 mil hab.)` <- df$confirmed_per_100k_inhabitants
+  df$State <- df$city_ibge_code
+  br <- brazilmaps::get_brmap(geo = "State",
+                              class = "sf")
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+  br_sf <- sf::st_as_sf(br) %>%
+    merge(df, by = "State")
+  # mapa
+  mapa <- tmap::tm_shape(br) +
+    tmap::tm_fill(col = "white") +
+    tmap::tm_borders() +
+    tmap::tm_shape(br_sf) +
+    tmap::tm_fill(colorNA = "white") +
+    tmap::tm_borders() +
+    if (prop_pop == TRUE) {
+      tmap::tm_symbols(size = "Casos (por 100 mil hab.)",
+                       col = "red",
+                       border.col = "red",
+                       scale = 2,
+                       alpha = 0.7)
+    } else {
+      tmap::tm_symbols(size = "Casos",
+                       col = "red",
+                       border.col = "red",
+                       scale = 2,
+                       alpha = 0.7)
+    }
+  if (anim == TRUE) {
+    anim <- mapa +
+      tmap::tm_facets(along = "date", free.coords = FALSE)
+    #ö: maybe animate here? i did that
+    if (!dir.exists(dir)) {
+      dir.create(dir)
+    }
+    anim <- tmap::tmap_animation(anim,
+                                 filename = paste0(dir, "/", "anim.gif"),
+                                 delay = 25,
+                                 width = 1200,
+                                 height = 1200,
+                                 restart.delay = 50)
+    return(anim)
+  }
+  mapa
+}
 ```
 
-## Including Plots
 
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
