blocking eval in vignettes

--- a/vignettes/coronabr.Rmd
+++ b/vignettes/coronabr.Rmd
@@ -8,7 +8,7 @@ vignette: >
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, warning = FALSE)
+knitr::opts_chunk$set(echo = TRUE, warning = FALSE, eval = FALSE)
 ```
 
 ## Para instalar o pacote
