--- a/vignettes/graficos.Rmd
+++ b/vignettes/graficos.Rmd
@@ -49,18 +49,16 @@ Para fazer o gráfico por estados, precisamos antes formatar os dados.
 dados_format <- format_corona_br(dados)
 ```
 
-Tentando fazer o gráfico de estados funcionar: 
-
-1. `plot_uf()`
+Gráfico proporcional ao tamanho populacional (Casos por 100 mil habitantes):
 
 ```{r estados, fig.width=6}
 plot_uf(df = dados_format)
 ```
 
-2. `plot_uf_edit()`
+Gráfico com o número bruto de notificações:
 
 ```{r estados2, fig.width=6}
-plot_uf2(df = dados_format)
+plot_uf(df = dados_format, prop_pop = FALSE)
 ```
 
 
