--- a/README.Rmd
+++ b/README.Rmd
@@ -7,14 +7,14 @@ output: github_document
 
 
 
-# Download de dados de COVID-19 no Brasil
+# _Download_ de dados de COVID-19 no Brasil
 
 <img src="https://raw.githubusercontent.com/liibre/coronabr/master/vignettes/figs/liibre.png" align="right" alt="" width="120" />
 
-__coronabr__ é um pacote de [R](https://www.r-project.org/) para fazer download e visualizar os dados dos casos diários de coronavírus (COVID-19) disponibilizados por diferentes fontes:
+__coronabr__ é um pacote de [R](https://www.r-project.org/) para fazer _download_ e visualizar os dados dos casos diários de coronavírus (COVID-19) disponibilizados por diferentes fontes:
 
 - [Ministério da Saúde](http://plataforma.saude.gov.br/novocoronavirus/#COVID-19-brazil);
-- [Brasil em dados libertos](https://brasil.io/dataset/covid19/caso);
+- [Brasil I/O](https://brasil.io/dataset/covid19/caso);
 - [Johns Hopkins University](https://github.com/CSSEGISandData/COVID-19)
 
 ## Nosso objetivo
@@ -36,7 +36,7 @@ Disponibilizamos aqui atualizações dos gráficos. Sabemos que
 deve haver maneiras responsáveis de apresentar estes dados e que as
 comparações entre regiões e países dependem de muitas variáveis.
 
-Os dados são referentes aos casos notificados. É sabido que temos subnotificação e atraso nas notificações. Assim, mais do que nunca, não refletem a epidemia em si.
+Os dados são referentes aos casos notificados. É sabido que temos subnotificação e atraso nas notificações. Assim, mais do que nunca, não refletem a epidemia em si. 
 
 ## Sobre os dados
 
@@ -51,8 +51,8 @@ No Brasil, a notificação de casos carrega consigo vieses espaciais, econômico
 + A partir de 2020-03-14, a notificação de casos graves de COVID-19 foca apenas nos casos graves que são atendidos nos hospitais.
 + Até 2020-03-18 o ministério de saúde brasileiro disponibilizou os dados de casos de coronavirus COVID-19 discriminados por estado na página http://plataforma.saude.gov.br/novocoronavirus/#COVID-19-brazil
 + Entre 2020-03-18 e 2020-03-25, a página original do Ministério da Saúde parou de funcionar e os dados de casos de coronavirus COVID-19 discriminados por estado foram divulgados em apresentações de powerpoint e PDFs no blog do Ministério. [Adriano Belisario](https://www.twitter.com/belisards) fez a compilação manual destes dados [neste repositório](https://github.com/belisards/coronabr)
-+ A partir de 2020-03-26 o ministério de saúde brasileiro disponibilizou os dados de casos de coronavirus COVID-19 na página https://covid.saude.gov.br/
-+ A partir de 2020-03-28 a opção de fazer download da série histórica por casos voltou a estar disponível. Depois disso, o padrão vem mudado diariamente, mas agora temos uma função estável `get_corona_minsaude()` para o download desses dados (instruções de como usar [aqui](https://liibre.github.io/coronabr/articles/minsaude.html)). 
++ A partir de 2020-03-26 o Ministério de Saúde brasileiro disponibilizou os dados de casos de coronavirus COVID-19 na página https://covid.saude.gov.br/
++ A partir de 2020-03-28 a opção de fazer _download_ da série histórica por casos voltou a estar disponível. Depois disso, o padrão vem mudado frequentemente, mas agora temos uma função estável `get_corona_minsaude()` para o _download_ desses dados (instruções de como usar [aqui](https://liibre.github.io/coronabr/articles/minsaude.html)). 
 
 ## Visualizando os dados 
 
@@ -86,11 +86,11 @@ Entre [aqui](https://liibre.github.io/coronabr/articles/lac.html) para acompanha
 
 ## Para saber mais:
 
-- Dados compilados pelo [Álvaro Justen](https://github.com/turicas/) e colaboradores [aqui](https://brasil.io/dataset/covid19/caso)
+- [Observatório Covid-19 BR](https://covid19br.github.io/)
+
+- Dados compilados pelo Brasil I/O, [Álvaro Justen](https://github.com/turicas/) e colaboradores [aqui](https://brasil.io/dataset/covid19/caso)
 
 - [John Hopkins Coronavirus COVID-19 Global Cases](https://coronavirus.jhu.edu/map.html)
-
-- [Observatório Covid-19 BR](https://covid19br.github.io/)
 
 - [Mapa de previsão da propagação da COVID-19 por contágio comunitário no Brasil](https://covid-19-risk.github.io/map/brazil/pt/)
 
@@ -109,5 +109,8 @@ Entre [aqui](https://liibre.github.io/coronabr/articles/lac.html) para acompanha
 - [Dez considerações antes de criar mais um gráfico sobre o COVID-19 (em inglês)](https://medium.com/nightingale/ten-considerations-before-you-create-another-chart-about-covid-19-27d3bd691be8)
 
 - Siga o **Atila Iamarino** no [youtube](https://www.youtube.com/channel/UCSTlOTcyUmzvhQi6F8lFi5w), [Instagram](www.instagram.com/oatila), [twitter](https://twitter.com/oatila) ou [telegram](https://t.me/corona_atila). Tem também um [fórum brasileiro de reddit](https://www.reddit.com/r/coronabr/) com muita informação.
+
+- Siga também o canal __Peixe Babel__ no [GitHub](https://github.com/peixebabel), [youtube](https://www.youtube.com/CanalPeixeBabel), [twitter](https://twitter.com/canalpeixebabel), [Instagram](https://www.instagram.com/canalpeixebabel/).
+
 
 Dúvidas, contribuições e sugestões, poste um *issue* [aqui](https://github.com/liibre/coronabr/issues), escreva-nos um [e-mail](mailto:liibrelab@gmail.com) ou nos encontre no twitter ([Sara](https://twitter.com/mortarasara), [Andrea](https://twitter.com/SanchezTapiaA) ou [Karlo](https://twitter.com/kguidonimartins)).
