--- a/vignettes/coronabr.Rmd
+++ b/vignettes/coronabr.Rmd
@@ -23,7 +23,8 @@ library(coronabr)
 
 ### Baixando os dados apenas do Brasil
 
-Aqui está o exemplo usando a função `get_corona_br()` que extrai os dados do portal https://brasil.io/, usando a API contendo os boletins informativos e casos de COVID-19 no Brasil. 
+Aqui está o exemplo usando a função `get_corona_br()` que extrai os dados do portal Brasil I/O
+https://brasil.io/, usando a API contendo os boletins informativos e casos de COVID-19 no Brasil. 
 
 ```{r get-br, error=TRUE}
 dados <- get_corona_br(by_uf = TRUE)
