--- a/vignettes/articles/lac_es.Rmd
+++ b/vignettes/articles/lac_es.Rmd
@@ -51,7 +51,7 @@ Para mostrar los datos en el mapa, necesitamos combinar los datos de los casos d
 
 ```{r merge}
 covid_lac <- merge(lac, dados_lac, by = "country_region")
-covid_lac$confirmed_per100k <- covid_lac$confirmed/covid_lac$pop_est * 1000000
+covid_lac$confirmed_per100k <- covid_lac$confirmed/covid_lac$pop_est * 100000
 ```
 
 Y ahora, visualicemos los datos en un mapa dinámico.
@@ -62,24 +62,24 @@ tm <- tm_shape(covid_lac) +
   tm_polygons("confirmed_per100k", 
               title = "Casos por 100 mil hab.", 
               breaks = c(0,
+                         10,
+                         15,
+                         20,
+                         40,
+                         60, 
                          100,
-                         150,
                          200,
                          400,
-                         600, 
-                         1000,
-                         2000,
-                         4000,
-                         5000), 
-              labels = c("0 a 100", 
-                         "100 a 150",
-                         "150 a 200",
+                         500), 
+              labels = c("0 a 10", 
+                         "10 a 15",
+                         "15 a 20",
+                         "20 a 40",
+                         "40 a 60",
+                         "60 a 100",
+                         "100 a 200",
                          "200 a 400",
-                         "400 a 600",
-                         "600 a 1000",
-                         "1000 a 2000",
-                         "2000 a 4000",
-                         ">4000"
+                         ">400"
                          )) +
   tmap_style("col_blind")
 tm
