--- a/vignettes/coronabr.Rmd
+++ b/vignettes/coronabr.Rmd
@@ -9,6 +9,7 @@ vignette: >
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, warning = FALSE)
+devtools::load_all()
 ```
 
 ## Para instalar o pacote
@@ -17,7 +18,7 @@ knitr::opts_chunk$set(echo = TRUE, warning = FALSE)
 
 ## Carregando o pacote
 
-```{r load}
+```{r load, eval = FALSE}
 library(coronabr)
 ```
 
