--- a/README.Rmd
+++ b/README.Rmd
@@ -52,7 +52,7 @@ No Brasil, a notificação de casos carrega consigo vieses espaciais, econômico
 + Até 2020-03-18 o ministério de saúde brasileiro disponibilizou os dados de casos de coronavirus COVID-19 discriminados por estado na página http://plataforma.saude.gov.br/novocoronavirus/#COVID-19-brazil
 + Entre 2020-03-18 e 2020-03-25, a página original do Ministério da Saúde parou de funcionar e os dados de casos de coronavirus COVID-19 discriminados por estado foram divulgados em apresentações de powerpoint e PDFs no blog do Ministério. [Adriano Belisario](https://www.twitter.com/belisards) fez a compilação manual destes dados [neste repositório](https://github.com/belisards/coronabr)
 + A partir de 2020-03-26 o Ministério de Saúde brasileiro disponibilizou os dados de casos de coronavirus COVID-19 na página https://covid.saude.gov.br/
-+ A partir de 2020-03-28 a opção de fazer _download_ da série histórica por casos voltou a estar disponível. Depois disso, o padrão vem mudado frequentemente, mas agora temos uma função estável `get_corona_minsaude()` para o _download_ desses dados (instruções de como usar [aqui](https://liibre.github.io/coronabr/articles/minsaude.html)). 
++ A partir de 2020-03-28 a opção de fazer _download_ da série histórica por casos voltou a estar disponível. Depois disso, o padrão tem mudado frequentemente, inclusive no formato de disponibilização dos dados que agora é em .xls e não mais .csv. Neste momento, temos uma função estável `get_corona_minsaude()` para o _download_ desses dados (instruções de como usar [aqui](https://liibre.github.io/coronabr/articles/minsaude.html)). 
 
 ## Visualizando os dados 
 
@@ -60,23 +60,23 @@ Importante lembrar que desde 2020-03-27 tem muitos testes sem resultados e que o
 
 Entre [aqui](https://liibre.github.io/coronabr/articles/lac.html) para acompanhar os casos na América Latina (versão em espanhol [aqui](https://liibre.github.io/coronabr/articles/lac_es.html))
 
-### Crescimento nacional no número de casos
+### Crescimento nacional no número de casos de COVID-19
 
 <img src="https://raw.githubusercontent.com/liibre/coronabr/master/docs/articles/graficos_files/figure-html/fig-casos-1.png" align="center" alt="" width="600" />
 
 
-### Entendendo o aumento diário
+### Entendendo o aumento diário de COVID-19
 
 <img src="https://raw.githubusercontent.com/liibre/coronabr/master/docs/articles/graficos_files/figure-html/fig-perc-1.png" align="center" alt="" width="600" />
 
-### Crescimento do número de casos nos estados mais afetados
+### Crescimento do número de casos de COVID-19 nos estados mais afetados
 
 <img src="https://raw.githubusercontent.com/liibre/coronabr/master/docs/articles/graficos_files/figure-html/estados-1.png" align="center" alt="" width="600" />
 
 <!---
 ### Número de casos por estado brasileiro
 
-<img src="https://raw.githubusercontent.com/liibre/coronabr/master/docs/articles/graficos_files/figure-html/mapa1-1.png" align="center" alt="" width="600" />
+<img src="https://raw.githubusercontent.com/liibre/coronabr/master/docs/articlfes/graficos_files/figure-html/mapa1-1.png" align="center" alt="" width="600" />
 
 ### Evolução do número de casos por estado
 
