updates Brasil I/O, adds SAVE, checks minsaude

--- a/vignettes/graficos.Rmd
+++ b/vignettes/graficos.Rmd
@@ -2,7 +2,7 @@
 title: "Visualização dos casos registrados de COVID-19 no Brasil"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{figs}
+  %\VignetteIndexEntry{Visualização dos casos registrados de COVID-19 no Brasil}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
