--- a/vignettes/articles/lac_es.Rmd
+++ b/vignettes/articles/lac_es.Rmd
@@ -56,35 +56,29 @@ Para mostrar los datos en el mapa, necesitamos combinar los datos de los casos d
 ```{r merge}
 covid_lac <- merge(lac, df_lac, by = "country_region")
 covid_lac$confirmed_per100k <- covid_lac$confirmed/covid_lac$pop_est * 100000
+
 ```
 
 Y ahora, visualicemos los datos en un mapa dinámico.
+
+```{r, echo = FALSE}
+maxi <- ceiling(max(covid_lac$confirmed_per100k)/100)*100
+breaks <- c(0, 50, 100, 200, 400, 800, 1600, maxi)
+text <- paste(breaks[1:length(breaks)-1], "a", breaks[2:length(breaks)])
+text[length(breaks)-1] <- paste(">", breaks[length(breaks)-1])
+text
+#hist(covid_lac$confirmed_per100k, breaks = )
+```
+
+
 
 ```{r map, results = TRUE}
 tmap_mode("view")
 tm <- tm_shape(covid_lac) +
   tm_polygons("confirmed_per100k", 
               title = "Casos por 100 mil hab.", 
-              breaks = c(0,
-                         10,
-                         15,
-                         20,
-                         40,
-                         60, 
-                         100,
-                         200,
-                         400,
-                         500), 
-              labels = c("0 a 10", 
-                         "10 a 15",
-                         "15 a 20",
-                         "20 a 40",
-                         "40 a 60",
-                         "60 a 100",
-                         "100 a 200",
-                         "200 a 400",
-                         ">400"
-                         )) +
+              breaks = breaks, 
+              labels = text) +
   tmap_style("col_blind")
 tm
 ```
