--- a/vignettes/coronabr.Rmd
+++ b/vignettes/coronabr.Rmd
@@ -2,7 +2,7 @@
 title: "Download dos casos de COVID-19 no Brasil"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{coronabr}
+  %\VignetteIndexEntry{Download dos casos de COVID-19 no Brasil}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -22,7 +22,21 @@ devtools::load_all()
 library(coronabr)
 ```
 
-### Baixando os dados apenas do Brasil
+### Baixando os dados oficiais do Ministério de Saúde do Brasil
+
+A função `get_corona_minsaude()` extrai os dados oficiais do Ministério da Saúde. 
+
+```{r get-ms, error=TRUE}
+dados <- get_corona_minsaude()
+```
+
+#### Inspecionando os dados
+
+```{r data-ms}
+head(dados)
+```
+
+### Baixando os dados apenas do Brasil, desde o Brasil I/O
 
 Aqui está o exemplo usando a função `get_corona_br()` que extrai os dados do portal Brasil I/O
 https://brasil.io/, usando a API contendo os boletins informativos e casos de COVID-19 no Brasil. 
@@ -37,7 +51,7 @@ dados <- get_corona_br(by_uf = TRUE)
 head(dados)
 ```
 
-### Baixando os dados mundiais
+### Baixando os dados mundiais do portal de John Hopkins
 
 ```{r get-jhu}
 dados_jhu <- get_corona_jhu()
